v1.4.2 - Pending
	+ Add %D for disc tag in display formatting options
	+ Bug: Fix seeking in progress bar
	+ Bug: Fix blank album info when there is an ampersand
	+ Bug: Missing color in notification window
	+ Bug: Notebook arrow clicks are ignored (because of gtk bug)
	+ Bug: Potential ordering bug when sorting via column heading click
	+ Bug: Make desktop file compliant

v1.4.1 - February 2, 2008
	+ Remove queue support (it was removed from mpd-svn, complain to them)
	+ Improved re-ordering of playlist songs (including multiple selected songs)
	+ Add album info into info tab
	+ Use hand2 instead of hand1 for song info links
	+ Bug: Traceback can occur after enabling audioscrobbler
	+ Bug: Text background color on tabs (ecik)
	+ Bug: Visible background of eventboxes for info tab links, etc.
	+ Bug: Can't click (more) link in non-English locales
	+ Bug: Crash when using libegg with system tray icon disabled
	+ Bug: Disable tag editing link in info tab for streams/remote files
	+ Bug: Unescape common html codes from lyrics fetching, enable formatting
	+ Bug: The main notebook should be scrollable

v1.4 - January 15, 2008
	+ Integrate info window into main player
	+ Update to audioscrobbler protocol 1.2 and scrobbling bug fixes (mveers)
	+ Implemented caching of scrobbles across client restarts
	+ Vertically center currently playing song
	+ Updated artwork (Adrian Chromenko)
	+ IPv6 support for the mpd connection (Shane Kerr)
	+ Allow screen center for notification popup
	+ Preference for saving lyrics to music file's directory (like artwork)
	+ Allow hiding and reordering notebook tabs (e.g. playlists, streams, info)
	+ Retain library path when re-opening Sonata
	+ Remove confusing 'remote only' and 'remote, then local' artwork options
	+ Ability to hide progress bar (can create very minimal player)
	+ Skip fallback artwork search of just album name if primary searches fail
	+ Make system tray icon scalable